# raytrace

./: .gitignore  CMakeLists.txt  Main.cpp
core/: Mesh.cpp  Octree.cpp  RayTrace.cpp  Scene.cpp
file/: ImgWriter.cpp  SceneLoader.cpp
include/: ImgWriter.h  Math.h  Mesh.h  Octree.h  RayTrace.h  Scene.h  SceneLoader.h  Vector3.h
